完成用户管理，部分权限管理

--- a/vuetest/src/assets/css/global.css
+++ b/vuetest/src/assets/css/global.css
@@ -1,9 +1,12 @@
-/* 全局样式表 */
+/* 全局样式表 
+ #app ： min-width:解决屏幕缩小 控件自己缩小的问题
+*/
 
 html,body,#app{
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
 }
 
 .el-breadcrumb{
@@ -24,3 +27,4 @@ html,body,#app{
 .el-pagination{
     margin-top: 15px;
 }
+
